# tweeter

./: Cargo.toml  Dockerfile
assets/: style.css
solution/: README.md
src/: db.rs  main.rs
views/: base.html  create_post.html  index.html  login.html  profile.html  register.html  settings.html
views/admin/: index.html  users.html
