[package]
name = "tweeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.7.7", features = ["cookie", "cookie-signed"] }
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
urlencoding = "2.1.3"
minijinja = { version = "1.0.7", features = ["loader", "builtins"] }
chrono = "0.4.30"
